--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,23 +1,21 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@section VueComponents
+{
+    @* @Html.Partial("VueComponents/_CoffeeMaker") *@
+    @Html.Partial("VueComponents/light")
+    @Html.Partial("VueComponents/cm")
+    @Html.Partial("VueComponents/_ProgressBar")
 }
-
-@section VueComponents {
-    @Html.Partial("_CoffeeMaker")
-    @Html.Partial("_ProgressBar")
-}
-
 <div id="app">
+    <div>{{hello}}</div>
     <coffee-maker></coffee-maker>
+    <light></light>
 </div>
 
 <script>
     new Vue({
         el: "#app",
-        data() {
-            return {
-                hello: "Hello from Vue!"
-            }
+        data:{
+          hello:'hello vue'
         }
     });
 </script>
