--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,6 @@
 
 @(await Html.UseVueComponent("lights-container"))
 
-
-@* 然后定义一个锚点,挂载这个窗体 *@
 <div id="app">
     <div>{{hello}}, 这是使用new Vue的方式挂载的组件,IDE没有丰富的代码提示</div>
     <div>下面是VUE的组件</div>
@@ -13,17 +11,23 @@
 </div>
 
 @* 编写主vue的js,提供挂载,但是这种方式引用的vue在cshtml中不具备代码索引功能.所以做大量vue组件和vue的组件嵌套使用等场景时,使用 类似于 lights-container内再引入light的方式.这样可以在vs中使用vue的代码索引功能. *@
-<script>
-    new Vue({
-        el: "#app",
-        data:{
-          hello:'hello vue'
-        }
-    });
-</script>
+@* <script> *@
+@*     new Vue({ *@
+@*         el: "#app", *@
+@*         data:{ *@
+@*           hello:'hello vue' *@
+@*         } *@
+@*     }); *@
+@* </script> *@
 
-@* cshtml中使用vue组件的步骤: *@
-@* 1.通过Html.Partial或者@section VueComponents引入vue组件的cshtml文档,这个cshtml文档包含引用并能输出一个.vue文件作为主体 *@
-@* 2.在cshtml定义一个用于挂载的锚点,比如<div id="app"></div> *@
-@* 3.在cshtml中编写主vue的js,提供挂载 *@
-@* 4.在cshtml的锚点内使用vue组件,比如<lights-container></lights-container> *@
+@Html.EnableVueContainers("app")
+
+@* 在cshtml中使用vue组件的步骤. *@
+@* *@
+@* 引入组件,如  @(await Html.UseVueComponent("lights-container")) *@
+@* 定义一个锚点,如  <div id="app"></div> *@
+@* 在锚点内使用组件,如 <lights-container></lights-container> *@
+@* 使用 @Html.EnableVueContainers("app") 以使能vue组件的挂载 *@
+@* 三步的顺序不能差,即先声明后使用,最后使能 *@
+```
+
